# fcp-auto-caption

./: .gitignore  README.md  pyproject.toml
src/fcp_auto_caption/: cli.py  detect_speech.py  subtitles_manager.py
